# StellarXblue-Belt

./: .gitignore  QUICK_START.md  README.md  SECURITY_CHECKLIST.md  deploy-contract.sh
.github/workflows/: deploy.yml
democontract/: Cargo.toml  escrow.rs  factory.rs  lib.rs  storage.rs  types.rs
trustwork-ui/: README.md  index.html  package-lock.json  package.json  vercel.json
trustwork-ui/src/: App.jsx  index.css
trustwork-ui/src/components/: ActionPanel.jsx  ContractCard.jsx  ContractChat.jsx  ContractForm.jsx  FileUploader.jsx  Navbar.jsx  TxModal.jsx  WalletModal.jsx
trustwork-ui/src/hooks/: useChat.js  useWallet.js
trustwork-ui/src/lib/: supabase.js
trustwork-ui/src/pages/: Arbitration.jsx  ContractDetail.jsx  CreateContract.jsx  Dashboard.jsx  Home.jsx  MetricsDashboard.jsx
trustwork-ui/src/utils/: analytics.js  contract.js  contractTemplates.js  monitoring.js  security.js  stellar.js
