[package]
name    = "trustwork-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # Required for Soroban WASM compilation
path       = "lib.rs"

[dependencies]
soroban-sdk = { version = "21.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level     = "z"       # Optimize for size (WASM binary size matters)
overflow-checks = true    # Keep overflow checks in release for safety
debug         = false
strip         = "symbols"
lto           = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug    = true
